ogrebulletdynconstraintsincludedir = $(includedir)/OgreBullet/Dynamics/Constraints

ogrebulletdynconstraintsinclude_HEADERS = \
 OgreBulletDynamics6DofConstraint.h \
 OgreBulletDynamics6DofSpringConstraint.h \
 OgreBulletDynamicsConeTwistConstraint.h \
 OgreBulletDynamicsHingeConstraint.h \
 OgreBulletDynamicsPoint2pointConstraint.h \
 OgreBulletDynamicsRaycastVehicle.h

